Bug 152231 - FILESAVE PDF PAC tool reports "Text object not tagged" error with comment in margin
Summary: FILESAVE PDF PAC tool reports "Text object not tagged" error with comment in ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2022-11-26 09:16 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-04 13:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with comment (30.75 KB, application/vnd.oasis.opendocument.text)
2022-11-26 09:16 UTC, Gabor Kelemen (Collabora)
Details
The example file exported to PDF (41.73 KB, application/pdf)
2022-11-26 09:17 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue in the PAC tool (215.54 KB, image/png)
2022-11-26 09:19 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-11-26 09:16:31 UTC
Created attachment 183797 [details]
Example file with comment

When the attached file with a comment in the margin is exported to PDF with PDF/UA enabled and the file is checked in the PAC tool, the reported error is "Text object not tagged".

1, Open attached file
2, In the Print dialog, LO Writer tab set the Comments option to "Place in margins" (somehow this is also applied to the PDF export), and press Cancel (no print happens, but the option setting is retained).
2, Export it as PDF, with enabled PDF/UA option.
3, Check with the PAC tool: https://pdfua.foundation/en/pdf-accessibility-checker-pac

PAC would report the error on the attached screenshot.

VeraPDF https://demo.verapdf.org/ with PDF/UA setting on the second page, reports:

Validation information
Rule	Status
Specification: ISO 14289-1:2014, Clause: 7.1, Test number: 3	
Content shall be marked as Artifact or tagged as real content	Failed
3 occurrences 	Hide
SESimpleContentItem	
parentStructureTag != null || parentsTags.split('&').filter(elem => elem == 'Artifact').length > 0	
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/content[15]/contentItem[0]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/content[15]/contentItem[1]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/content[15]/contentItem[2]

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5116d6ad85d804e7b7897bc57a4a4bf9d5bed4f1
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2022-11-26 09:17:34 UTC
Created attachment 183798 [details]
The example file exported to PDF
Comment 2 Gabor Kelemen (Collabora) 2022-11-26 09:19:33 UTC
Created attachment 183799 [details]
Screenshot of the issue in the PAC tool
Comment 3 Buovjaga 2023-03-08 08:10:00 UTC
I repro.

Note: there is no longer need to set the option in Print dialog. The PDF export dialog has a checkbox option to add comments to margin. As a matter of fact, the Print dialog trick does not even work anymore by itself.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a179f6c91692076e7e17babf4890638caa398384
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-07-03 09:32:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a225b4dbd46897903b217969da5f97f2660022c9

tdf#152231 vcl,sw: PDF/UA export: fix comments in the margin

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-03 11:52:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20901a1a8633dc693cfd6354d0b660b81c242b70

tdf#152231 sw: PDF/UA export: tag comments in the margin as Artifact

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-07-03 11:52:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9eacbf7874320d44b79966cac8fa59c52a191715

tdf#152231 vcl: PDF/UA export: content of comments in the margin

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2023-07-03 12:19:51 UTC
fixed on master, the comments in margins are artifacts now
Comment 8 Commit Notification 2023-07-04 13:20:10 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/db97096e0f386881b7fecd868ba16def34a976ae

tdf#152231 vcl,sw: PDF/UA export: fix comments in the margin

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-04 13:21:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/81d9ca3015757f617c8420b079dfe1d5e1961c32

tdf#152231 sw: PDF/UA export: tag comments in the margin as Artifact

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-07-04 13:21:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/3f504e684560be7038a68e0941fad9cbcfc58fc6

tdf#152231 vcl: PDF/UA export: content of comments in the margin

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.