sw/source/core/view/vprint.cxx
@@ -33,6 +33,7 @@
 #include <unotools/syslocale.hxx>
 #include <vcl/oldprintadaptor.hxx>
 
+#include <optional>
 #include <unotxdoc.hxx>
 #include <docsh.hxx>
 #include <txtfld.hxx>
@@ -461,32 +462,13 @@ bool SwViewShell::PrintOrPDFExport(
     // output device is now provided by a call from outside the Writer)
     pOutDev->Push();
 
-    // fdo#36815 for comments in margins print to a metafile
-    // and then scale that metafile down so that the comments
-    // will fit on the real page, and replay that scaled
-    // output to the real outputdevice
-    GDIMetaFile *pOrigRecorder(nullptr);
-    std::unique_ptr<GDIMetaFile> pMetaFile;
     SwPostItMode nPostItMode = rPrintData.GetPrintPostIts();
 
     // tdf#91680 Reserve space in margin for comments only if there are comments
     const bool bHasPostItsToPrintInMargins = ( nPostItMode == SwPostItMode::InMargins ) &&
                                 sw_GetPostIts( &GetDoc()->getIDocumentFieldsAccess(), nullptr );
 
-    if ( bHasPostItsToPrintInMargins )
-    {
-        //get and disable the existing recorder
-        pOrigRecorder = pOutDev->GetConnectMetaFile();
-        pOutDev->SetConnectMetaFile(nullptr);
-        // turn off output to the device
-        pOutDev->EnableOutput(false);
-        // just record the rendering commands to the metafile
-        // instead
-        pMetaFile.reset(new GDIMetaFile);
-        pMetaFile->SetPrefSize(pOutDev->GetOutputSize());
-        pMetaFile->SetPrefMapMode(pOutDev->GetMapMode());
-        pMetaFile->Record(pOutDev);
-    }
+    ::std::optional<long> oOrigHeight;
 
     // Print/PDF export for (multi-)selection has already generated a
     // temporary document with the selected text.
@@ -550,32 +532,7 @@ bool SwViewShell::PrintOrPDFExport(
             pPostItManager->CalcRects();
             pPostItManager->LayoutPostIts();
             pPostItManager->DrawNotesForPage(pOutDev, nPage-1);
-
-            //Stop recording now
-            pMetaFile->Stop();
-            pMetaFile->WindStart();
-            //Enable output to the device again
-            pOutDev->EnableOutput();
-            //Restore the original recorder
-            pOutDev->SetConnectMetaFile(pOrigRecorder);
-
-            //Now scale the recorded page down so the notes
-            //will fit in the final page
-            double fScale = 0.75;
-            long nOrigHeight = pStPage->getFrameArea().Height();
-            long nNewHeight = nOrigHeight*fScale;
-            long nShiftY = (nOrigHeight-nNewHeight)/2;
-            pMetaFile->Scale( fScale, fScale );
-            pMetaFile->WindStart();
-            //Move the scaled page down to center it
-            //the other variant of Move does not map pixels
-            //back to the logical units correctly
-            pMetaFile->Move(0, convertTwipToMm100(nShiftY), pOutDev->GetDPIX(), pOutDev->GetDPIY());
-            pMetaFile->WindStart();
-
-            //play back the scaled page
-            pMetaFile->Play(pOutDev);
-            pMetaFile.reset();
+            oOrigHeight.emplace(pStPage->getFrameArea().Height());
         }
     }
 
@@ -584,6 +541,22 @@ bool SwViewShell::PrintOrPDFExport(
     // restore settings of OutputDevice (should be done always now since the
     // output device is now provided by a call from outside the Writer)
     pOutDev->Pop();
+
+    // avoid a warning about unbalanced Push/Pop by doing this last:
+    if (oOrigHeight)
+    {
+        // fdo#36815 Now scale the recorded page down so the comments in
+        // margins will fit in the final page
+        double fScale = 0.75;
+        long nNewHeight = *oOrigHeight*fScale;
+        long nShiftY = (*oOrigHeight-nNewHeight)/2;
+        GDIMetaFile *const pMetaFile = pOutDev->GetConnectMetaFile();
+        pMetaFile->ScaleActions(fScale, fScale);
+        //Move the scaled page down to center it
+        //the other variant of Move does not map pixels
+        //back to the logical units correctly
+        pMetaFile->Move(0, convertTwipToMm100(nShiftY), pOutDev->GetDPIX(), pOutDev->GetDPIY());
+    }
 
     return true;
 }
